--- a/AndroidJava/app/src/main/res/layout/fragment_introduction.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_introduction.xml
@@ -1,16 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/frameLayout"
-
+    android:layout_weight="1"
+    android:background="@color/DarkGreen"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".Introduction">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/dishImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_weight=".3" />
+
+    <TextView
+        android:id="@+id/appName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight=".1"
+        android:gravity="center"
+        android:text="Foodienator"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.09"
+        android:gravity="center"
+        android:text="Order your favorite meals here!"
+        android:textColor="#F8EFEF"
+        android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="20dp"
+        android:layout_weight=".5"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/btnSignIn"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+
+
+            android:backgroundTint="@color/SoftPink"
+            android:text="Sign in"
+            android:textColor="@color/white"
+
+            app:cornerRadius="0dp"
+            app:strokeColor="@color/DarkGreen"
+            app:strokeWidth="1dp" />
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/Green"
+
+            android:text="Register"
+            android:textColorLink="#DADADA"
+            app:cornerRadius="0dp"
+            app:strokeColor="@color/DarkGreen"
+            app:strokeWidth="1dp" />
+    </LinearLayout>
+
+</LinearLayout>
