--- a/AndroidJava/app/src/main/res/layout/fragment_sign_up.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_sign_up.xml
@@ -9,7 +9,7 @@
     android:background="@color/Green"
 
 
-    tools:context=".SignUp">
+    tools:context=".fragments.SignUp">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -97,7 +97,7 @@
 
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="@color/SoftPink"
+                android:backgroundTint="@color/red"
                 android:text="@string/sign_up"
                 android:textColor="@android:color/white" />
 
@@ -134,7 +134,7 @@
 
             <LinearLayout
 
-                android:id="@+id/registerWithGoogleET"
+                android:id="@+id/loginWithGoogleET"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
