--- a/AndroidJava/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.Home">
 
-    <!-- Search View (Fixed at Top) -->
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="200dp"
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Scrollable Content -->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -40,6 +40,7 @@
 
         <TextView
             android:id="@+id/textView5"
+            style="@style/bigTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/daily_inspiration"
@@ -69,6 +70,7 @@
 
         <TextView
             android:id="@+id/textView4"
+            style="@style/bigTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
