--- a/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
@@ -1,14 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MealDetails">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-</FrameLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="280dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center_horizontal"
+
+            android:layout_marginTop="20dp"
+            android:paddingTop="10dp"
+            app:cardBackgroundColor="@color/SoftPink"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="5dp">
+
+            <ImageView
+                android:id="@+id/mealImage"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/food" />
+        </androidx.cardview.widget.CardView>
+
+        <!-- Ingredients -->
+        <TextView
+            android:id="@+id/mealName"
+            style="@style/bigTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:text="Title" />
+
+        <TextView
+            style="@style/bigTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:paddingTop="10dp"
+            android:text="@string/description"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+
+
+        <TextView
+            style="@style/bigTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:paddingTop="10dp"
+            android:text="@string/ingredients"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            tools:listitem="@layout/ingredient_item" />
+
+
+
+        <!-- Steps -->
+        <TextView
+            style="@style/bigTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:paddingTop="10dp"
+            android:text="@string/steps"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            app:cardBackgroundColor="@color/SoftPink"
+            app:cardCornerRadius="10dp">
+
+            <TextView
+                android:id="@+id/mealSteps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+
+                android:text="1. Step 1\n2. Step 2\n3. Step 3"
+                android:textSize="16sp" />
+        </androidx.cardview.widget.CardView>
+        <!-- Video Button -->
+        <Button
+            android:id="@+id/playVideoButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+
+            android:paddingTop="10dp"
+            android:text="Watch Video" />
+
+    </LinearLayout>
+
+</ScrollView>
