--- a/AndroidJava/app/src/main/res/layout/meal_cell.xml
+++ b/AndroidJava/app/src/main/res/layout/meal_cell.xml
@@ -45,18 +45,18 @@
 
                 <TextView
                     android:id="@+id/Title"
-                    android:maxLines="2"
-                    android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_marginRight="5dp"
-                    app:layout_constraintStart_toEndOf="@id/heartImg"
+                    android:ellipsize="end"
                     android:fontFamily="monospace"
+                    android:maxLines="2"
                     android:textAppearance="?attr/textAppearanceHeadline5"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@id/heartImg" />
 
                 <ImageView
                     android:id="@+id/heartImg"
