--- a/AndroidJava/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidJava/app/src/main/res/navigation/nav_graph.xml
@@ -31,7 +31,14 @@
         android:id="@+id/mealDetails"
         android:name="com.example.androidjava.fragments.MealDetails"
         android:label="fragment_meal_details"
-        tools:layout="@layout/fragment_meal_details" />
+        tools:layout="@layout/fragment_meal_details" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="mealObject"
+            app:argType="com.example.androidjava.Models.Meal" />
+    </fragment>
     <fragment
         android:id="@+id/introduction"
         android:name="com.example.androidjava.fragments.Introduction"
@@ -74,11 +81,19 @@
         <argument
             android:name="country"
             app:argType="string"
-            android:defaultValue="unKnown"/>
+      />
         <argument
             android:name="category"
             app:argType="string"
-            android:defaultValue="unKnownCategory" />
+            />
+        <action
+            android:id="@+id/action_mealsList_to_mealDetails"
+            app:destination="@id/mealDetails" />
     </fragment>
+    <fragment
+        android:id="@+id/favoritesPage"
+        android:name="com.example.androidjava.fragments.favoritesPage"
+        android:label="fragment_favorites_page"
+        tools:layout="@layout/fragment_favorites_page" />
 
 </navigation>
